src/objects/PSA_Entity__c.object
<CustomObject>
    <description>Represents the Guidewire billing legal entity associated with this project. Note, there is a flag required on legal entity set-up to identify if legal entity should be available as billing entity or not.</description>
    <fields>
        <fullName>PSA_Billing_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the country for this entity</description>
        <label>Country</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Entities</relationshipLabel>
        <relationshipName>Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Entity_Code__c</fullName>
        <externalId>true</externalId>
        <label>Entity Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_GLA_In__c</fullName>
        <description>Entity&apos;s GLA In code.  Used by intercompany transfer functionality and reporting</description>
        <inlineHelpText>Entity&apos;s GLA In code.  Used by intercompany transfer functionality and reporting</inlineHelpText>
        <label>GLA In</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_GLA_Out__c</fullName>
        <description>Entity&apos;s GLA Out code.  Used by intercompany transfer functionality and reporting</description>
        <inlineHelpText>Entity&apos;s GLA Out code.  Used by intercompany transfer functionality and reporting</inlineHelpText>
        <label>GLA Out</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Lookup_Assist__c</fullName>
        <displayFormat>all {0}</displayFormat>
        <label>PSA Lookup Assist</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PSA_Short_Name__c</fullName>
        <label>Short Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Entity_Code__c</columns>
        <columns>PSA_Short_Name__c</columns>
        <columns>PSA_Billing_Entity__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>PSA_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>